@@ -1,5 +1,3 @@
 
 Check code coverage of tests
 
-per-element attributes for select()
-
